scrollbar fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,21 @@
-.app::-webkit-scrollbar {
-  background-color: #fff;
-  width: 16px;
+*::-webkit-scrollbar {
+  background-color: transparent;
+  width: 0.3em;
 }
 
 /* background of the scrollbar except button or resizer */
-.app::-webkit-scrollbar-track {
-  background-color: #fff;
+*::-webkit-scrollbar-track {
+  background-color: transparent;
 }
 
 /* scrollbar itself */
-.app::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   background-color: #babac0;
-  border-radius: 16px;
-  border: 4px solid #fff;
+  border-radius: 0.3em;
 }
 
 /* set button(top and bottom of the scrollbar) */
-.app::-webkit-scrollbar-button {
+*::-webkit-scrollbar-button {
   display:none;
 }
 
